--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mathjs": "^11.8.0",
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
